--- a/index.html
+++ b/index.html
@@ -422,42 +422,59 @@
     </div>
   </footer>
 
- <!-- Modal  -->
+  <!-- Modal  -->
 
   <div class="backdrop is-open">
     <div class="modal">
-      <div class="modal-button-close">
+      <button class="modal-button-close" type="button">
         <svg class="modal-button-icon" width="8" height="8">
           <use href="./images/icons.svg#icon-cross"></use>
         </svg>
-      </div>
+      </button>
       <p class="contacts-form-title">
         Leave your contacts and we will call you back
       </p>
       <form action="#" class="contacts-form">
-        <label for="name" class="contacts-form-label">Name
-          <input class="contacts-form-input" id="name" type="text" autofocus>
-          <svg class="contacts-form-icon" width="12" height="12">
-            <use href="./images/icons.svg#icon-user"></use>
-          </svg>
-        </label>
-        <label for="phone" class="contacts-form-label">Phone
-          <input class="contacts-form-input" id="phone" type="phone">
-          <svg class="contacts-form-icon" width="12" height="12">
-            <use href="./images/icons.svg#icon-phone"></use>
-          </svg>
-        </label>
-        <label for="email" class="contacts-form-label">Email
-          <input class="contacts-form-input" id="email" type="email" autofocus>
-          <svg class="contacts-form-icon" width="12" height="12">
-            <use href="./images/icons.svg#icon-email"></use>
-          </svg>
-        </label>
-        <label for="comment" class="contacts-form-label">Comment
-          <textarea class="contacts-form-textarea" placeholder="Text input" id="comment"></textarea>
-        </label>
-        <label for="agreement" class="contacts-form-checkbox-label">
-          <input class="contacts-form-checkbox" type="checkbox" value="agree" id="agreement">
+        <div class="contacts-form-field-wrapper">
+          <label for="user-name" class="contacts-form-label">
+            Name
+          </label>
+          <div class="contacts-form-input-wrapper">
+            <input class="contacts-form-input" id="user-name" type="text" autofocus>
+            <svg class="contacts-form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-user"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="contacts-form-field-wrapper">
+          <label for="phone" class="contacts-form-label">
+            Phone
+          </label>
+          <div class="contacts-form-input-wrapper">
+            <input class="contacts-form-input" id="phone" type="tel">
+            <svg class="contacts-form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="contacts-form-field-wrapper">
+          <label for="email" class="contacts-form-label">
+            Email
+          </label>
+          <div class="contacts-form-input-wrapper">
+            <input class="contacts-form-input" id="email" type="email">
+            <svg class="contacts-form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="contacts-form-field-wrapper">
+          <label for="user-comment" class="contacts-form-label">Comment
+          </label>
+          <textarea class="contacts-form-textarea" placeholder="Text input" id="user-comment"></textarea>
+        </div>
+        <label for="user-privacy" class="contacts-form-checkbox-label">
+          <input class="contacts-form-checkbox" type="checkbox" value="true" name="user-privacy" id="user-privacy">
           I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
         <button class="contacts-form-button" type="submit">Send</button>
       </form>
