--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
             Name
           </label>
           <div class="contacts-form-input-wrapper">
-            <input class="contacts-form-input" id="user-name" type="text" autofocus>
+            <input class="contacts-form-input" id="user-name" name="user-name" type="text" autofocus>
             <svg class="contacts-form-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-user"></use>
             </svg>
@@ -473,9 +473,16 @@
           </label>
           <textarea class="contacts-form-textarea" placeholder="Text input" id="user-comment"></textarea>
         </div>
-        <label for="user-privacy" class="contacts-form-checkbox-label">
-          <input class="contacts-form-checkbox" type="checkbox" value="true" name="user-privacy" id="user-privacy">
-          I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
+        <div class="contacts-form-checkbox-wrapper">
+          <input class="contacts-form-checkbox-hidden visually-hidden" type="checkbox" value="true" name="user-privacy" id="user-privacy">
+          <label for="user-privacy" class="contacts-form-checkbox-label">
+            <span class="contacts-form-checkbox">
+              <svg class="contacts-form-checkbox-icon" width="10" height="8">
+                <use href="./images/icons.svg#icon-cross"></use>
+              </svg>
+            </span> I accept the terms and conditions of the <a class="contacts-form-link" href="#">Privacy Policy</a>
+          </label>
+        </div>
         <button class="contacts-form-button" type="submit">Send</button>
       </form>
     </div>
