--- a/index.html
+++ b/index.html
@@ -419,6 +419,20 @@
           </li>
         </ul>
       </div>
+      <div class="footer-form-column">
+        <p class="footer-form-title">
+          Subscribe
+        </p>
+        <form action="#" class="footer-form">
+          <input class="footer-form-input" type="email" name="email" placeholder="E-mail">
+          <button class="footer-form-button" type="submit">
+            <span>Subscribe</span>
+            <svg class="footer-form-img" width="24" height="24">
+              <use href="./images/icons.svg#icon-send"></use>
+            </svg>
+          </button>
+        </form>
+      </div>
     </div>
   </footer>
 
