--- a/index.html
+++ b/index.html
@@ -424,9 +424,9 @@
           Subscribe
         </p>
         <form action="#" class="footer-form">
-          <input class="footer-form-input" type="email" name="email" placeholder="E-mail">
+          <label class="footer-form-label"><input class="footer-form-input" type="email" name="email" placeholder="E-mail"></label>
           <button class="footer-form-button" type="submit">
-            <span>Subscribe</span>
+            Subscribe
             <svg class="footer-form-img" width="24" height="24">
               <use href="./images/icons.svg#icon-send"></use>
             </svg>
@@ -465,7 +465,7 @@
             Phone
           </label>
           <div class="contacts-form-input-wrapper">
-            <input class="contacts-form-input" id="phone" type="tel">
+            <input class="contacts-form-input" id="phone" name="user-phone" type="tel">
             <svg class="contacts-form-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-phone"></use>
             </svg>
@@ -476,23 +476,23 @@
             Email
           </label>
           <div class="contacts-form-input-wrapper">
-            <input class="contacts-form-input" id="email" type="email">
+            <input class="contacts-form-input" id="email" type="email" name="user-email">
             <svg class="contacts-form-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-email"></use>
             </svg>
           </div>
         </div>
-        <div class="contacts-form-field-wrapper">
+        <div class="contacts-form-textarea-wrapper">
           <label for="user-comment" class="contacts-form-label">Comment
           </label>
-          <textarea class="contacts-form-textarea" placeholder="Text input" id="user-comment"></textarea>
+          <textarea class="contacts-form-textarea" placeholder="Text input" id="user-comment" name="user-comment"></textarea>
         </div>
         <div class="contacts-form-checkbox-wrapper">
           <input class="contacts-form-checkbox-hidden visually-hidden" type="checkbox" value="true" name="user-privacy" id="user-privacy">
           <label for="user-privacy" class="contacts-form-checkbox-label">
             <span class="contacts-form-checkbox">
               <svg class="contacts-form-checkbox-icon" width="10" height="8">
-                <use href="./images/icons.svg#icon-cross"></use>
+                <use href="./images/icons.svg#icon-checked"></use>
               </svg>
             </span> I accept the terms and conditions of the <a class="contacts-form-link" href="#">Privacy Policy</a>
           </label>
